--- a/config.toml
+++ b/config.toml
@@ -20,10 +20,10 @@ preserveTaxonomyNames = true
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "meyerperin"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-75015365-3"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
@@ -51,7 +51,7 @@ defaultContentLanguageInSubdir = false
 
   # Your details.
   name = "Lucas A. Meyer"
-  role = "Data Scientist | Indie Gamer | Busy Dad"
+  role = "Data Scientist | Busy Dad"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
