--- a/config.toml
+++ b/config.toml
@@ -145,7 +145,7 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = []
+  highlight_languages = ["r", "python"]
   # highlight_style = "github"
 
   # Enable native social sharing buttons?
