--- a/config.toml
+++ b/config.toml
@@ -111,7 +111,7 @@ defaultContentLanguageInSubdir = false
   comment_count = true
 
   # Display next/previous section pager?
-  section_pager = false
+  section_pager = true
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
@@ -243,6 +243,11 @@ defaultContentLanguageInSubdir = false
   align_right = true
 
 [[menu.main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 1
+
+[[menu.main]]
   name = "Home"
   url = "#about"
   weight = 2
@@ -251,11 +256,6 @@ defaultContentLanguageInSubdir = false
 # name = "Publications"
 # url = "#publications_selected"
 # weight = 2
-
-[[menu.main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 1
 
 # [[menu.main]]
 #  name = "Projects"
