--- a/config.toml
+++ b/config.toml
@@ -145,8 +145,8 @@ defaultContentLanguageInSubdir = false
   #   For more info on the highlighting options, see:
   #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
   highlight = true
-  highlight_languages = ["r", "python"]
-  # highlight_style = "github"
+  highlight_languages = ["python", "bash"]
+  highlight_style = "github"
 
   # Enable native social sharing buttons?
   sharing = true
